--- a/extension/index.html
+++ b/extension/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Search the web with the power of the turtle!" />
+    <title>Omni Turtle Search</title>
   </head>
   <body>
     <div id="root"></div>
